# sngp-segmentation

./: .gitignore  .gitmodules  README.md  aiai_project.sbatch  aiai_seg.sbatch  config.py  fpft_fsdp.py  local_ddp.sh  local_mpl_ddp.sh  local_sngp.sh  localrun.sh  main.py  main_ddp.py  main_project.py  main_seg.py  mpl_ddp.py  one_head_decoder_sketch.ipynb  pretrained_ijepa.py  pyproject.toml  simple_decoder_sketch.ipynb  slurm_ddp.sh  sngp_fpft.sbatch  sngp_model.py  sngp_seg.sbatch  template.env  test.py  utils.py  wandb_sync.sh
slurm/: aiai_dahps_sweep.sbatch  aiai_seg_cityscape_deeplab.sbatch  aiai_seg_ul_sweep.sbatch  aiai_seg_voc_deeplab.sbatch  dataset_download.sh
slurm/cityscape_deeplab_lr_sweep/: aiai_seg_cityscape_deeplab_1e-4.sbatch  aiai_seg_cityscape_deeplab_1e-5.sbatch  aiai_seg_cityscape_deeplab_1e-6.sbatch
slurm/ul_sweep/: aiai_seg_ul_sweep.sbatch.template  aiai_seg_ul_sweep_0.1.sbatch  generate.sh
slurm/voc_deeplab_lr_sweep/: aiai_seg_voc_deeplab_lr1e-4.sbatch  aiai_seg_voc_deeplab_lr1e-5.sbatch  aiai_seg_voc_deeplab_lr1e-6.sbatch
sngp_segmentation/: cli.py  data.py  dataset.py  deeplab.py  ijepa.py  metrics.py  project.py  sngp.py  train.py  unet.py  utils.py
