[tool.poetry]
name = "sngp-segmentation"
version = "0.1.0"
description = ""
authors = ["Patrick Kage <p.kage@ed.ac.uk>", "Jay Rothenberger <jay.c.rothenberger@ou.edu>"]
readme = "README.md"
packages = [{include = "sngp_segmentation"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.2.1"
torchvision = "^0.17.1"
accelerate = "^0.27.2"
rich = "^13.7.1"
wandb = "^0.16.4"
numpy = "^1.26.4"
scipy = "^1.12.0"
python-dotenv = "^1.0.1"
torchmetrics = "^1.3.1"
tqdm = "^4.66.2"
h5py = "^3.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
