[project]
name = "sngp-segmentation"
version = "0.1.0"
description = ""
authors = [
    { name = "Patrick Kage", email = "p.kage@ed.ac.uk" },
    { name = "Jay Rothenberger", email = "jay.c.rothenberger@ou.edu" },
]
requires-python = "~=3.9"
readme = "README.md"
dependencies = [
    "accelerate>=1.10.1",
    # "torch>=2.2.1"
    # "torchvision>=0.17.1,<0.18",
    # "accelerate>=0.27.2,<0.28",
    # "rich>=13.7.1,<14",
    # "wandb>=0.16.4,<0.17",
    # "numpy>=1.26.4,<2",
    # "scipy>=1.12.0,<2",
    # "python-dotenv>=1.0.1,<2",
    # "torchmetrics>=1.3.1,<2",
    # "tqdm>=4.66.2,<5",
    # "h5py>=3.11.0,<4",
    # "einops>=0.7.0,<0.8",
    # "click>=8.1.7,<9",
    "click>=8.1.8",
    "dahps",
    "einops>=0.8.1",
    "h5py>=3.14.0",
    "numpy>=1.26.4",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "scipy>=1.13.1",
    "torch>=2.8.0",
    "torchmetrics>=1.8.1",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "wandb>=0.21.3",
]

[dependency-groups]
dev = [
    # "ipykernel>=6.29.4,<7",
    # "matplotlib>=3.8.4,<4",
    # "ipywidgets>=8.1.2,<9",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.9.4",
]

[tool.hatch.build.targets.sdist]
include = ["sngp_segmentation"]

[tool.hatch.build.targets.wheel]
include = ["sngp_segmentation"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.jupyter.kernel]
name = "sngp-seg"

[tool.uv.sources]
dahps = { git = "https://github.com/JayRothenberger/DAHPS" }
# dahps = { path = "DAHPS" }
